--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "express": "~4.16.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "promise-mysql": "^3.3.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
